repair, hellanzb will automatically force the download of a minimal amount of
extra pars immediately

Daemon:
o New remote call: 'setrarpass'
(From hellanzb.py --help)

  setrarpass nzbid pass Set the rarPassword for the NZB with the specified ID

o Rar passwords are now saved in between CTRL-Cs.

o No longer leaving enqueuednewzbin/dequeued/cancelled NZBs in the TEMP_DIR


v0.8:

Daemon:

o Fixed a nasty bug with the 'clear' RPC call -- it was deleting all files in
  the QUEUE_DIR (not just queued .nzb files). This bug prevented hellanzb from
  working nicely with shared QUEUE_DIRs (such as your web browser's download
  dir. This technique was even recommended in hellanzb's OS X install
  document), in fact, it could cause unwanted data loss (thanks yak)

o Quicker and more robust newzbin.com downloads (enqueuenewzbin call)

NZBLeecher:

o Added duplicate file detection/handling. Previously, NZB files containing
  duplicate files could cause the downloader to stop (at the end of an archive)
  under certain situations

o Fixed a decoder bug (causing corrupt downloads) affecting some uuencoded
  posts (and potentially some rare yEncoded posts)

o Fixed a yDecode specific decoder bug (causing corrupt downloads)

o Fixed a couple nasty bugs in the new downloader code (submitted by
  bobmckenzie, thanks!)

o Fixed "not1not2" KeyError exception in the multiple server pool automatic
  failover code (submitted by bobmckenzie, thanks again!)

o Fixed a bug causing the downloader to stop and the scroller to scroll
  excessive lines, after a certain situation where hellanzb was paused twice

o Correctly handling NZB files with out of order segments, previously this
  could cause corruption (thanks spinez)

o Fixed a bug causing the downloader to stop (at the end of an archive) after
  pausing/continuing with bandwidth throttling enabled (MAX_RATE set to
  a non zero value)


v0.7:

Daemon:

o Added the -D option to run the hellanzb queue daemon as an actual unix daemon